--- a/Meme Me/Base.lproj/Main.storyboard
+++ b/Meme Me/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="1jd-Cs-bkq">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
@@ -16,14 +16,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="HJb-on-5qt">
-                                <rect key="frame" x="20.5" y="44" width="374" height="762"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="374" id="K7E-g4-vbe"/>
-                                    <constraint firstAttribute="height" constant="762" id="yee-vG-Va9"/>
-                                </constraints>
+                                <rect key="frame" x="21" y="88" width="374" height="725"/>
                             </imageView>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GIp-7Y-hC9">
-                                <rect key="frame" x="0.0" y="818" width="415" height="44"/>
+                                <rect key="frame" x="-13" y="822" width="414" height="49"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="45" id="pRP-AA-iGc"/>
+                                </constraints>
+                                <viewLayoutGuide key="safeArea" id="DBc-sZ-l5D"/>
                                 <items>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="Lr5-lJ-q1S"/>
                                     <barButtonItem title="Album" id="gZK-Ii-vWG">
@@ -40,34 +40,36 @@
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="GzO-XX-IJw"/>
                                 </items>
                             </toolbar>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="BOTTOM" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NeJ-BU-oFc">
-                                <rect key="frame" x="103" y="761" width="205" height="34"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="TOP" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Rbi-Sa-eeC">
+                                <rect key="frame" x="105" y="124" width="206" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="TOP" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Rbi-Sa-eeC">
-                                <rect key="frame" x="105" y="80" width="205" height="34"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="BOTTOM" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NeJ-BU-oFc">
+                                <rect key="frame" x="105" y="765" width="206" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
                             </textField>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Rbi-Sa-eeC" secondAttribute="trailing" constant="104" id="3XB-Yw-ftL"/>
-                            <constraint firstItem="GIp-7Y-hC9" firstAttribute="top" secondItem="HJb-on-5qt" secondAttribute="bottom" constant="12" id="4jx-yZ-c1U"/>
-                            <constraint firstItem="Rbi-Sa-eeC" firstAttribute="leading" secondItem="NeJ-BU-oFc" secondAttribute="leading" constant="2" id="5cA-Db-YrJ"/>
-                            <constraint firstItem="HJb-on-5qt" firstAttribute="centerX" secondItem="Rbi-Sa-eeC" secondAttribute="centerX" id="HE4-h0-ITz"/>
-                            <constraint firstItem="HJb-on-5qt" firstAttribute="centerX" secondItem="GIp-7Y-hC9" secondAttribute="centerX" id="I2D-8y-n9K"/>
-                            <constraint firstItem="GIp-7Y-hC9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="LZ8-AM-dZw"/>
-                            <constraint firstItem="GIp-7Y-hC9" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="PRU-y8-6hQ"/>
-                            <constraint firstItem="Rbi-Sa-eeC" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="36" id="fnF-HZ-3Wx"/>
-                            <constraint firstItem="Rbi-Sa-eeC" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="105" id="nRf-pb-HuV"/>
-                            <constraint firstAttribute="bottom" secondItem="NeJ-BU-oFc" secondAttribute="bottom" constant="101" id="s5P-Mf-Wrc"/>
-                            <constraint firstItem="Rbi-Sa-eeC" firstAttribute="trailing" secondItem="NeJ-BU-oFc" secondAttribute="trailing" constant="2" id="t3Y-do-xq9"/>
-                            <constraint firstItem="HJb-on-5qt" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="yAu-6I-ekl"/>
+                            <constraint firstItem="GIp-7Y-hC9" firstAttribute="top" secondItem="NeJ-BU-oFc" secondAttribute="bottom" constant="23" id="6AU-4h-mEh"/>
+                            <constraint firstItem="HJb-on-5qt" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="21" id="8pN-Dl-JZ3"/>
+                            <constraint firstItem="HJb-on-5qt" firstAttribute="centerX" secondItem="NeJ-BU-oFc" secondAttribute="centerX" id="9qT-Fr-ejA"/>
+                            <constraint firstItem="GIp-7Y-hC9" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-33" id="AXa-bc-qel"/>
+                            <constraint firstItem="HJb-on-5qt" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Irm-Td-3gG"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="GIp-7Y-hC9" secondAttribute="trailing" constant="13" id="Qtq-6d-G1m"/>
+                            <constraint firstItem="Rbi-Sa-eeC" firstAttribute="leading" secondItem="NeJ-BU-oFc" secondAttribute="leading" id="Usd-qy-FCs"/>
+                            <constraint firstItem="Rbi-Sa-eeC" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="36" id="chl-Xd-kNh"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="GIp-7Y-hC9" secondAttribute="bottom" constant="-9" id="e4E-3g-OgN"/>
+                            <constraint firstItem="Rbi-Sa-eeC" firstAttribute="trailing" secondItem="NeJ-BU-oFc" secondAttribute="trailing" id="evk-IG-eTI"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="HJb-on-5qt" secondAttribute="trailing" constant="19" id="gB4-Qa-AHC"/>
+                            <constraint firstItem="Rbi-Sa-eeC" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="105" id="o1O-xF-7Xt"/>
+                            <constraint firstItem="GIp-7Y-hC9" firstAttribute="top" secondItem="HJb-on-5qt" secondAttribute="bottom" constant="9" id="t54-Le-Z3L"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="QhG-ia-eB4"/>
                     <connections>
                         <outlet property="bottomTextField" destination="NeJ-BU-oFc" id="OVP-h3-xJT"/>
                         <outlet property="cameraButton" destination="aUK-DP-sup" id="3uB-db-Wnr"/>
@@ -78,7 +80,26 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="131.8840579710145" y="120.53571428571428"/>
+            <point key="canvasLocation" x="3772.4637681159425" y="120.53571428571428"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="TQp-Oj-uXt">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="1jd-Cs-bkq" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="UfZ-Sy-eZv"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="vwk-UU-Ouw">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="7OZ-b5-AJ6"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hgq-fb-NRT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2862.3188405797105" y="120.53571428571428"/>
         </scene>
     </scenes>
     <resources>
